lab15/ingress-moose.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-moose
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /moose(/|$)(.*)
        pathType: Prefix
        backend:
          service:
             name: moose-svc
             port:
                number: 80
